# anymarket-description-scrapper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/configurations/: configurations.py
